[package]
name = "dm_x"
description = "A library for using dmenu as an option picker"
version = "0.1.1"
repository = "https://github.com/d2718/dmx-rs"
homepage = "https://github.com/d2718/dmx-rs"
license = "MIT"
edition = "2021"

keywords = ["dmenu", "ui", "menu"]
categories = ["gui"]

[dependencies]

[dev-dependencies]
libc = "^0.2"
once_cell = "^1.12"
serde = { version = "^1.0", features=["derive"] }
serde_json = "^1.0"