[package]
name = "dm_x"
description = "A library for using dmenu as an option picker"
version = "0.2.2"
repository = "https://github.com/d2718/dmx-rs"
homepage = "https://github.com/d2718/dmx-rs"
documentation = "https://docs.rs/dm_x"
license = "MIT"
edition = "2021"

keywords = ["dmenu", "ui", "menu"]
categories = ["gui"]

[dependencies]
serde = { version = "^1.0", features=["derive"], optional = true }
toml = { version = "^0.5", optional = true }

[dev-dependencies]
libc = "^0.2"
once_cell = "^1.12"
serde = { version = "^1.0", features=["derive"] }
serde_json = "^1.0"

[features]
config = ["dep:serde", "dep:toml"]